# ray-tracing-next-week

./: CMakeLists.txt  CMakePresets.json  build.bat
src/: aabb.h  bvh.h  camera.h  color.h  constant_medium.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  perlin.h  quad.h  ray.h  rtutils.h  rtw_stb_image.h  sphere.h  texture.h  vec3.h
